# startsaswisper

./: .gitignore  LICENSE  README.md  notebook.ipynb  pyproject.toml
api/: recordings.csv
startsaswisper/: pipeline.py
